Fixed overflow on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,5 @@
   height: 100%;
   margin: auto;
   display: flex;
+  overflow: hidden;
 }
