--- a/src/components/EmptyProfileComponent.scss
+++ b/src/components/EmptyProfileComponent.scss
@@ -10,4 +10,8 @@
         font-size: 18px;
         font-weight: 500;
     }
+
+    & img {
+        max-width: 100%;
+    }
 }
